# k8s-chaos-engineering

./: .gitignore  .isort.cfg  ADOPTERS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  Readme.md  SECURITY.md  TESTING_GUIDE.md  demo_report_20250727_032541.json  mongodb.yaml  pyproject.toml  pytest.ini  renovate.json  test-ci-local.sh  test_runner.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.gitlab-ci-templates/: chaos-test.yml
config/: blast-radius.yaml  clusters.yaml  config.yaml  slo.yaml
deployments/: README.md  flask-app-deployment.yaml  flask-app.yaml  flask-service.yaml  litmus-frontend-service.yaml  litmus-values.yaml  mongodb-deployment.yaml  mongodb-pvc.yaml  mongodb-secret.yaml  mongodb-serviceaccount.yaml  mongodb.yaml  nginx.yaml
docs/: architecture.md  case_studies.md  contributing.md  deployment_guide.md  gameday.md  gitops.md  integrations.md  multicluster.md  phase2-phase3-guide.md  plugins.md  pypi.md  safety.md  slo-reporting.md  technical_specification.md  version-matrix.md
experiments/: chaos-workflow.yaml  cpu-hog.yaml  custom-chaos.yaml  disk-stress.yaml  kustomization.yaml  multi-cluster-chaos.yaml  network-latency.yaml  pod-delete.yaml  rbac-improved.yaml  rbac.yaml
hack/: ensure-chaos-experiment.sh  ensure-dev-install.sh  install-litmus.sh  kind-cluster.yaml  pre-release-check.sh  quickstart.sh  sync-package-data.sh  validate-manifests.sh  wait-litmus-ready.sh
hello-world-app/: .dockerignore  Dockerfile  app.py  notifications.py
helm/: Chart.yaml  litmus-values.yaml  values-digitalocean.yaml  values.yaml
jenkins/: chaos-pipeline.groovy
manifests/: README.md  flask-app.yaml  local-test-app.yaml  minimal-test.yaml  simple-test-app.yaml  simple-working-app.yaml  working-app.yaml  working-chaos-app.yaml  working-test-app.yaml
monitoring/: alerting-rules.yaml  chaos-alerts.yaml  chaos-dashboard.yaml  prometheus.yaml
plugins/: __init__.py  log_stress_demo.py
scripts/: README.md  abort.py  advanced-chaos-runner.py  chaos-runner.py  cli.py  demo-chaos-framework.py  demo-working-chaos.py  demo-working-framework.py  doctor.py  gameday.py  multicluster.py  notifications.py  preflight.py  quickstart_report.py  requirements-dev.txt  requirements.txt  scheduler.py  setup-cluster.sh  setup.py  templates.py  test-chaos-framework.py
(+123 files in other folders)
